Only add "All GPUs" sensors when there is at least one GPU with statistics

Otherwise we have an empty "GPU" entry that does nothing when there are
no supported GPUs.

BUG: 436770